@@ -5,6 +5,12 @@
 
 2007-03-10	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-81-01-shlib-01-07:
+	  sim/chpsim/EventExecutor.cc: helper class in wrong namespace.
+
+
+2007-03-10	David Fang		<fangism@users.sourceforge.net>
+
 	* HACKT-00-01-04-main-00-81-01-shlib-01-06:
 	  Moved compile_options::export_include_path to main/main_funcs.cc.
 	  Executables: hacpp (flatten), hacobjdump, hacalloc, hacprsim, 
